tests/out/error/result/or_type_mismatch.out
tests/out/error/result/or_type_mismatch.in.bt:9:6 error: `or` bock must:
  - Provide a default value of type `i32`, OR
  - Change the control-flow (return/continue/break), OR
  - Call a @noreturn function
tests/out/error/result/or_type_mismatch.in.bt:13:6 error: `or` bock must:
  - Provide a default value of type `i32`, OR
  - Change the control-flow (return/continue/break), OR
  - Call a @noreturn function
